--- a/templates/footer.gohtml
+++ b/templates/footer.gohtml
@@ -1,5 +1,6 @@
 {{define "footer"}}
   <footer>
-    <a href="#">Home</a>
+    <a href="/">Home</a>
+    <a href="/user">User</a>
   </footer>
 {{end}}
