--- a/templates/user.gohtml
+++ b/templates/user.gohtml
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
   </head>
   <body>
     {{template "navbar"}}
-    <h1>Hello World</h1>
+    <h1>User: Stephen Lampa</h1>
     {{template "footer"}}
   </body>
 </html>
