--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
   </head>
   <body>
     {{template "navbar"}}
