--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -11,6 +11,7 @@
       <input type="text" name="password" placeholder="Password">
       <input type="submit" value="Log In">
     </form>
+    <span><a href="/signup">Sign Up</a></span>
     {{template "footer"}}
   </body>
 </html>
