Add navbar stylesheet

--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="stylesheet" href="/stylesheets/navbar.css">
   </head>
   <body>
     {{template "navbar"}}
