--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -1,21 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="/stylesheets/signup.css">
-  </head>
-  <body>
-    {{template "navbar"}}
-    {{.}}
-      <form method="POST" action="/signup/create">
-        <input type="text" name="username" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
-        <input type="password" name="password-confirm" placeholder="Confirm Password">
-        <input type="text" name="first-name" placeholder="First Name">
-        <input type="text" name="last-name" placeholder="Last Name">
-        <input type="submit" value="Sign Up">
-      </form>
-    {{template "footer"}}
-  </body>
-</html>
+{{define "content"}}
+  {{.}}
+  <form method="POST" action="/signup/create">
+    <input type="text" name="username" placeholder="Username">
+    <input type="password" name="password" placeholder="Password">
+    <input type="password" name="password-confirm" placeholder="Confirm Password">
+    <input type="text" name="first-name" placeholder="First Name">
+    <input type="text" name="last-name" placeholder="Last Name">
+    <input type="submit" value="Sign Up">
+  </form>
+{{end}}
+
+{{define "styles"}}
+  <link rel="stylesheet" href="/stylesheets/signup.css">
+{{end}}
