--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="/stylesheets/login.css">
-  </head>
-  <body>
-    {{template "navbar"}}
-    <form action="login">
-      <input type="text" name="username" placeholder="Username">
-      <input type="text" name="password" placeholder="Password">
-      <input type="submit" value="Log In">
-    </form>
-    <span><a href="/signup">Sign Up</a></span>
-    {{template "footer"}}
-  </body>
-</html>
+{{define "content"}}
+  <form action="login">
+    <input type="text" name="username" placeholder="Username">
+    <input type="text" name="password" placeholder="Password">
+    <input type="submit" value="Log In">
+  </form>
+  <span><a href="/signup">Sign Up</a></span>
+{{end}}
+
+{{define "styles"}}
+  <link rel="stylesheet" href="/stylesheets/login.css">
+{{end}}
