--- a/templates/navbar.gohtml
+++ b/templates/navbar.gohtml
@@ -1,7 +1,8 @@
 {{define "navbar"}}
   <nav>
     <a href="/">Home</a>
-    <a href="/user">User</a>
+    <a href="/users">Users</a>
     <a href="/login">Log In</a>
+    <a href="/signup">Sign Up</a>
   </nav>
 {{end}}
