Add handler for login creation

--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -1,5 +1,5 @@
 {{define "content"}}
-  <form action="login">
+  <form method="POST" action="/login/create">
     <input type="text" name="username" placeholder="Username">
     <input type="text" name="password" placeholder="Password">
     <input type="submit" value="Log In">
