--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -1,6 +1,9 @@
 {{define "content"}}
-  {{.}}
+  {{.Message}}
   <h1>Hello World!</h1>
+  {{range .Users}}
+    <p>{{.FirstName}} {{.LastName}}</p>
+  {{end}}
 {{end}}
 
 {{define "styles"}}
