Change views to handle new Page struct

--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -1,5 +1,5 @@
 {{define "content"}}
-  {{.}}
+  {{.Message}}
   <form method="POST" action="/login/create">
     <input type="text" name="username" placeholder="Username">
     <input type="password" name="password" placeholder="Password">
