--- a/templates/base.gohtml
+++ b/templates/base.gohtml
@@ -8,7 +8,7 @@
     {{template "styles"}}
   </head>
   <body>
-    {{template "navbar"}}
+    {{template "navbar" .}}
 
     <div class="container">
       {{template "content" .}}
