Refactor login/signup to handle GET/POST requests in single function
Refactor signup to handle GET and POST in single function

--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -1,6 +1,6 @@
 {{define "content"}}
   {{.Message}}
-  <form method="POST" action="/login/create">
+  <form method="POST" action="/login">
     <input type="text" name="username" placeholder="Username">
     <input type="password" name="password" placeholder="Password">
     <input type="submit" value="Log In">
