--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -1,6 +1,6 @@
 {{define "content"}}
   {{.Message}}
-  <form method="POST" action="/signup/create">
+  <form method="POST" action="/signup">
     <input type="text" name="username" placeholder="Username">
     <input type="password" name="password" placeholder="Password">
     <input type="password" name="password-confirm" placeholder="Confirm Password">
