--- a/templates/navbar.gohtml
+++ b/templates/navbar.gohtml
@@ -3,7 +3,7 @@
     <a href="/">Home</a>
     <a href="/users">Users</a>
     {{if (ne .User.ID 0)}}
-      <span>Hello, {{$.User.FirstName}}!</span>
+      <span>Hello, <a href="/user/{{$.User.ID}}">{{$.User.FirstName}}!</a></span>
       <a href="/logout">Logout</a>
     {{else}}
       <a href="/login">Log In</a>
