Add link to each user on users page

--- a/templates/users.gohtml
+++ b/templates/users.gohtml
@@ -1,6 +1,6 @@
 {{define "content"}}
   {{range .UsersData}}
-    <p>{{.FirstName}} {{.LastName}}</p>
+    <a href="/user/{{.ID}}">{{.Username}}</p>
   {{end}}
 {{end}}
 
